{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 8,
  "lineage": "5496f6c7-2d89-6c8e-a0fc-031ab67cdde0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034bc4e4fcccfe844",
            "arn": "arn:aws:ec2:ap-northeast-1:069152737884:instance/i-0b354d367988d951f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b354d367988d951f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a726022f921d7f9",
            "private_dns": "ip-10-0-1-88.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.88",
            "public_ip": "52.196.5.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e7cd17aa9554fae4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a88d52a99e5571d9",
            "tags": {
              "Name": "ExampleAppServerInstance"
            },
            "tags_all": {
              "Name": "ExampleAppServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eceda4c5d42d46da"
            ]
          },
          "dependencies": [
            "aws_security_group.example_sg",
            "aws_subnet.example_subnet",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:069152737884:internet-gateway/igw-02a546d51fcf77fd9",
            "id": "igw-02a546d51fcf77fd9",
            "owner_id": "069152737884",
            "tags": {
              "Name": "ExampleIGW"
            },
            "tags_all": {
              "Name": "ExampleIGW"
            },
            "vpc_id": "vpc-0d8456e33b2386206"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:069152737884:route-table/rtb-040821f53e5d9b3ad",
            "id": "rtb-040821f53e5d9b3ad",
            "owner_id": "069152737884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a546d51fcf77fd9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ExampleRouteTable"
            },
            "tags_all": {
              "Name": "ExampleRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8456e33b2386206"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055ac8f6c8ab575af",
            "route_table_id": "rtb-040821f53e5d9b3ad",
            "subnet_id": "subnet-0a88d52a99e5571d9"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_rt",
            "aws_subnet.example_subnet",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:069152737884:security-group/sg-0eceda4c5d42d46da",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eceda4c5d42d46da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "example-sg",
            "name_prefix": "",
            "owner_id": "069152737884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ExampleSecurityGroup"
            },
            "tags_all": {
              "Name": "ExampleSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8456e33b2386206"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:069152737884:subnet/subnet-0a88d52a99e5571d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a88d52a99e5571d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069152737884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ExampleSubnet"
            },
            "tags_all": {
              "Name": "ExampleSubnet"
            },
            "vpc_id": "vpc-0d8456e33b2386206"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:069152737884:vpc/vpc-0d8456e33b2386206",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b1de54f8242577d",
            "default_route_table_id": "rtb-06223edd4e8a9b360",
            "default_security_group_id": "sg-04a9f8a01c0aa1c20",
            "dhcp_options_id": "dopt-0d62df7762a7d15d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8456e33b2386206",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06223edd4e8a9b360",
            "owner_id": "069152737884",
            "tags": {
              "Name": "ExampleVPC"
            },
            "tags_all": {
              "Name": "ExampleVPC"
            }
          }
        }
      ]
    }
  ]
}